# danske-spil

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.result-agent  Makefile  README.md  pyproject.toml
docs/: browser-investigation.md  compliance-and-safety.md  data-intelligence.md  hermes-agent.md  kubernetes-architecture.md  ngrok-path-routing.md  poc-deployment.md  poc-implementation.md  project-plan.md  project-wiki.md  result-agent.md  simulation-ledger.md  web-ui.md
k8s/base/: 00-namespace.yaml  10-postgres-cluster.yaml  20-gambler.yaml  30-hermes-poc.yaml
k8s/ngrok/: path-backends.yaml
scripts/: account_history_agent.py  agent_browser_poc.sh  deploy_local_k8s.sh  external_result_evidence_probe.py  patch_ngrok_path_routing.sh  probe_danskespil_content.py  result_agent.py  sofascore_evidence_probe.py
src/: config.rs  danske_spil.rs  lib.rs  main.rs  models.rs  service.rs  store.rs  ui.rs
src/gambler/: __init__.py  app.py  config.py  core.py  danske_spil.py  db.py  web.py  worker.py
tests/: test_account_history_agent.py
tests/fixtures/: account_history_requests.json  account_history_text.txt
wiki/: index.md  log.md  schema.md
wiki/concepts/: browser-automation-investigation.md  gambler-web-ui.md  hermes-gambler-loop.md  llm-maintained-project-wiki.md  simulation-ledger.md  sports-data-intelligence.md  system-architecture.md
wiki/decisions/: 0001-research-first-human-approved.md  README.md
wiki/experiments/: README.md
wiki/runbooks/: README.md  browser-investigation.md
wiki/sources/: danske-spil-dom-observations.md  danske-spil-netspil-terms.md  llm-wiki.md
