[package]
name = "danske-spil-gambler"
version = "0.1.0"
edition = "2021"

[features]
default = ["ui"]
ui = ["dep:dioxus", "dep:dioxus-ssr"]

[[bin]]
name = "danske-spil-gambler"
path = "src/main.rs"
required-features = ["ui"]

[[bin]]
name = "danske-spil-result-agent"
path = "src/bin/result_agent.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
dioxus = { version = "0.6", optional = true }
dioxus-ssr = { version = "0.6", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }

[profile.k8s-dev]
inherits = "dev"
debug = 0
incremental = true
opt-level = 0
panic = "abort"
strip = "debuginfo"
